# hexlet_hello

./: pyproject.toml
h_h/: __init__.py  capitalize.py  main.py
h_h/scripts/: main.py
tests/: test_capitalize.py
