[project]
name = "hexlet-hello"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["h_h"]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]

[project.scripts]
my-app = "h_h.scripts.main:main"
